[package]
name = "wasi_tokio_http"
version = "0.0.1"
publish = false
edition = "2021"

[dependencies]
tokio = { git = "https://github.com/rjzak/tokio", branch = "wasi_wip", features = ["net", "rt", "macros"] }
tokio-util = { git = "https://github.com/rjzak/tokio", branch = "wasi_wip", features = ["codec"] }
tokio-stream = { git = "https://github.com/rjzak/tokio", branch = "wasi_wip"  }

bytes = "1.0.0"
futures = { version = "0.3.0", features = ["thread-pool"]}

http = "0.2"
httparse = "1.0"
httpdate = "1.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
